--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/serializable-closure": "^1.0",
+        "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.18",
         "realrashid/sweet-alert": "^7.1"
