--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.18",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
