--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
         "php": "^8.1",
         "ezyang/htmlpurifier": "^4.17",
         "guzzlehttp/guzzle": "^7.2",
-        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/serializable-closure": "^1.0",
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.18",
-        "realrashid/sweet-alert": "^7.1"
+        "livewire/livewire": "^3.3",
+        "realrashid/sweet-alert": "^7.1",
+        "rtconner/laravel-likeable": "^3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
