--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "beyondcode/laravel-websockets": "^1.14",
         "ezyang/htmlpurifier": "^4.17",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -14,6 +15,7 @@
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.18",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
