--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jquery": "^3.7.1",
         "moment": "^2.29.4",
         "socket.io-client": "^4.7.2",
-        "tinymce": "^6.8.1"
+        "tinymce": "^6.8.1",
+        "vue": "^3.4.0"
     }
 }
