--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "jquery": "^3.7.1",
         "moment": "^2.29.4",
-        "tinymce": "^6.8.1"
+        "socket.io-client": "^4.7.2",
+        "tinymce": "^6.8.1",
+        "vue": "^3.4.0"
     }
 }
