--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/serializable-closure": "^1.0",
+        "laravel/slack-notification-channel": "^3.1",
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "league/flysystem": "^3.18",
